--- a/view/layouts/create-form.ejs
+++ b/view/layouts/create-form.ejs
@@ -22,8 +22,8 @@
         <a href="/profiles/new" style="color: #d0c37e"><b>Create</b></a>
       </li>
       <li><a href="/profiles/edit">Update</a></li>
-      <li><a href="/profiles/edit">View</a></li>
-      <li><a href="/profiles/edit">Delete</a></li>
+      <li><a href="/profiles/view">View</a></li>
+      <li><a href="/profiles/delete">Delete</a></li>
     </ul>
 
     <form action="/profiles/new" method="post">
@@ -42,6 +42,7 @@
 
       <input id="submit" type="submit" value="Create!" />
     </form>
-     <script src="../js/create-form.js"></script>
+     <script src="/public/js/create-form.js"></script>
   </body>
 </html>
+
