--- a/view/layouts/home.ejs
+++ b/view/layouts/home.ejs
@@ -19,10 +19,10 @@
     <ul id="buttons">
       <li><a href="/profiles/new">Create</a></li>
       <li><a href="/profiles/edit">Update</a></li>
-      <li><a href="/profiles/edit">View</a></li>
-      <li><a href="/profiles/edit">Delete</a></li>
+      <li><a href="/profiles/view">View</a></li>
+      <li><a href="/profiles/delete">Delete</a></li>
     </ul>
     <div class="taskBox"></div>    
-    <script src="../js/homepage.js"></script>
+    <script src="/public/js/homepage.js"></script>
   </body>
 </html>
