--- a/public/css/home.css
+++ b/public/css/home.css
@@ -37,3 +37,12 @@ h4 {
   height: 200px;
   margin: auto;
 }
+.grid {
+  display: grid;
+  grid-template-columns: 150px 150px 150px 150px;
+  grid-template-rows: 150px 150px;
+  grid-gap: 2%;
+    padding-top: 5%;
+    margin:auto;
+    place-content: center;
+}
