--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -4,12 +4,12 @@
     <title>Basic Web Page</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link href="/public/css/create-form.css" rel="stylesheet" />
+    <link href="./css/create-form.css" rel="stylesheet" />
   </head>
 
   <body>
    
-    <h1>Twit-Book</h1>
+    <h1><a href="/">Twit-Book</a></h1>
     <div>
       <h4>
         Welcome to Twit-Book! Where you are able to create mock social media
@@ -19,23 +19,19 @@
     </div>
     <ul id="buttons">
       <li>
-        <a href="/profiles/new" style="color: #d0c37e"><b>Create</b></a>
+        <a href="/create" style="color: #d0c37e"><b>Create</b></a>
       </li>
-      <li><a href="/profiles/edit">Update</a></li>
-      <li><a href="/profiles/view">View</a></li>
-      <li><a href="/profiles/delete">Delete</a></li>
+      <li><a href="/edit">Update</a></li>
+      <li><a href="/view">View</a></li>
+      <li><a href="/delete">Delete</a></li>
     </ul>
 
-    <form action="/profiles/new" method="post">
+    <form action="/create" method="POST">
       <label for="name">Name: </label>
       <input id="name" type="text" name="name" />
 
       <label for="birthday">Birthday:</label>
       <input type="date" id="birthday" name="birthday" />
-
-      <label for="pfp">Profile picture:</label>
-
-      <input type="file" id="pfp" name="pfp" accept="image/png, image/jpeg" />
 
       <label for="bio">Bio:</label>
       <textarea id="bio" type="text" name="bio" maxlength="139"></textarea>
