--- a/views/update-form.ejs
+++ b/views/update-form.ejs
@@ -5,11 +5,11 @@
     <title>Basic Web Page</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link href="/public/css/update-form.css" rel="stylesheet" />
+    <link href="../public/css/update-form.css" rel="stylesheet" />
 </head>
 
 <body>
-    <h1>Twit-Book</h1>
+    <h1><a href="/">Twit-Book</a></h1>
     <div>
         <h4>
             Welcome to Twit-Book! Where you are able to create mock social media
@@ -18,13 +18,13 @@
         </h4>
     </div>
     <ul id="buttons">
-        <li><a href="/profiles/new">Create</a></li>
-        <li><a href="/profiles/edit">Update</a></li>
-        <li><a href="/profiles/view">View</a></li>
-        <li><a href="/profiles/delete">Delete</a></li>
+        <li><a href="/create">Create</a></li>
+        <li><a href="/edit">Update</a></li>
+        <li><a href="/view">View</a></li>
+        <li><a href="/delete">Delete</a></li>
     </ul>
     <div class="taskBox">
-        <form action="/profiles/edit/:name" method="post">
+        <form action="/edit/:name" method="put">
             <label for="name">Name: </label>
             <input id="name" type="text" name="name" />
 
