--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,17 +1,17 @@
 body {
-  background: #1b73a5;
+  background: #1B73A5;;
   color: #fff;
   padding: 25px;
   font-family: sans-serif;
+  margin: auto;
 }
-h1,
-h4 {
+h1, h4 {
   text-align: center;
 }
-h4 {
-  max-width: 750px;
-  margin: auto;
-  padding-bottom: 15px;
+h4{
+   max-width: 750px;
+    margin: auto;
+    padding-bottom: 15px;
 }
 
 #buttons {
@@ -20,24 +20,32 @@ h4 {
   list-style: none;
   margin: 0;
   padding: 0;
-  max-width: 700px;
-  margin: auto;
+   max-width: 700px;
+   margin: auto;
+   
 }
 
+
+a:hover {
+  color:#D0C37E;
+}
+a:active {
+  color:#D0C37E;
+}
 #buttons li {
   flex: auto;
-  border-radius: 0.5em;
-  padding: 0.5em;
+  border-radius: .5em;
+  padding: .5em;
   text-align: center;
 }
+
 .taskBox {
-  border: 0.5mm solid black;
-  display: block;
-  max-width: 700px;
-  height: 200px;
-  margin: auto;
-}
-.grid {
+  border: .5mm solid black;
+    display: block;
+    max-width: 700px;
+    height: 200px;
+    margin: auto;
+}.grid {
   display: grid;
   grid-template-columns: 150px 150px 150px 150px;
   grid-template-rows: 150px 150px;
@@ -46,3 +54,7 @@ h4 {
     margin:auto;
     place-content: center;
 }
+.cell{
+  background-color:black;
+}
+
