--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -4,7 +4,7 @@
     <title>Basic Web Page</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link href="./css/create-form.css" rel="stylesheet" />
+    <link href="create-form.css" rel="stylesheet" />
   </head>
 
   <body>
