--- a/views/update-form.ejs
+++ b/views/update-form.ejs
@@ -5,7 +5,7 @@
     <title>Basic Web Page</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link href="../public/css/update-form.css" rel="stylesheet" />
+    <link href="update-form.css" rel="stylesheet" />
 </head>
 
 <body>
