--- a/views/update-names.ejs
+++ b/views/update-names.ejs
@@ -5,7 +5,7 @@
     <title>Basic Web Page</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link href='../public/css/update-names.css' rel='stylesheet'>
+    <link href='update-names.css' rel='stylesheet'>
 </head>
 
 <body>
