--- a/views/update-names.ejs
+++ b/views/update-names.ejs
@@ -25,14 +25,14 @@
     <div class='taskBox'>
       <h5> Select a username below to update</h5>
         <ul id="names">
-            <li><a href='1'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
-<li><a href='/edit/:name'>Ronald barnett</a></li>
+            <li><a href='/edit/:<%= name1 %>'><%= name1 %></a></li>
+<li><a href='/edit/:<%= name2 %>'><%= name2 %></a></li>
+<li><a href='/edit/:<%= name3 %>'><%= name3 %></a></li>
+<li><a href='/edit/:<%= name4 %>'><%= name4 %></a></li>
+<li><a href='/edit/:<%= name5 %>'><%= name5 %></a></li>
+<li><a href='/edit/:<%= name6 %>'><%= name6 %></a></li>
+<li><a href='/edit/:<%= name7 %>'><%= name7 %></a></li>
+<li><a href='/edit/:<%= name8 %>'><%= name8 %></a></li>
 
         </ul>
     </div>
