--- a/views/update-form.ejs
+++ b/views/update-form.ejs
@@ -23,24 +23,25 @@
         <li><a href="/view">View</a></li>
         <li><a href="/delete">Delete</a></li>
     </ul>
+
+
     <div class="taskBox">
-        <form action="/edit/:name" method="put">
+        <form action='/edit/:name' method='PUT'></form>
             <label for="name">Name: </label>
-            <input id="name" type="text" name="name" />
+            <input id="name" type="text" name="name" value="<%= name %>" />
 
             <label for="birthday">Birthday:</label>
-            <input type="date" id="birthday" name="birthday" />
+            <input type="date" id="birthday" name="birthday" value="<%= birthday %>"/>
 
            
 
             <label for="bio">Bio:</label>
             <textarea id="bio" type="text" name="bio" maxlength="139"></textarea>
-            <input id="submit" type="submit" value="Update!" />
+            <input id="submit" type="submit" value="Update!" value="<%= bio %>"/>
         </form>
-        <div>
-          <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3D%2522default%2Bprofile%2Bpicture%2522&psig=AOvVaw2Ou5xeCV62qu1oL06ZAj_R&ust=1642795836511000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCIDM7MSRwfUCFQAAAAAdAAAAABAD" alt="profile-pic">
-           </div>
+        
     </div>
+
 
     <div class="grid">
         <div class="cell"></div>
