--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <title>Basic Web Page</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link href="home.css" rel="stylesheet" />
+    <link href="/home.css" rel="stylesheet" />
   </head>
   <body>
 
