--- a/views/delete-names.ejs
+++ b/views/delete-names.ejs
@@ -25,14 +25,14 @@
     <div class='taskBox'>
       <h5> Select a username below to update</h5>
         <ul id="names">
-            <li><a href='/delete/:<%= name1 %>'><%= name1 %></a></li>
-<li><a href='/delete/:<%= name2 %>'><%= name2 %></a></li>
-<li><a href='/delete/:<%= name3 %>'><%= name3 %></a></li>
-<li><a href='/delete/:<%= name4 %>'><%= name4 %></a></li>
-<li><a href='/delete/:<%= name5 %>'><%= name5 %></a></li>
-<li><a href='/delete/:<%= name6 %>'><%= name6 %></a></li>
-<li><a href='/delete/:<%= name7 %>'><%= name7 %></a></li>
-<li><a href='/delete/:<%= name8 %>'><%= name8 %></a></li>
+            <li><a href='/delete/<%= name1 %>'><%= name1 %></a></li>
+<li><a href='/delete/<%= name2 %>'><%= name2 %></a></li>
+<li><a href='/delete/<%= name3 %>'><%= name3 %></a></li>
+<li><a href='/delete/<%= name4 %>'><%= name4 %></a></li>
+<li><a href='/delete/<%= name5 %>'><%= name5 %></a></li>
+<li><a href='/delete/<%= name6 %>'><%= name6 %></a></li>
+<li><a href='/delete/<%= name7 %>'><%= name7 %></a></li>
+<li><a href='/delete/<%= name8 %>'><%= name8 %></a></li>
 
         </ul>
     </div>
