--- a/views/view-names.ejs
+++ b/views/view-names.ejs
@@ -25,14 +25,14 @@
     <div class='taskBox'>
       <h5> Select a username below to update</h5>
         <ul id="names">
-            <li><a href='/view/:<%= name1 %>'><%= name1 %></a></li>
-<li><a href='/view/:<%= name2 %>'><%= name2 %></a></li>
-<li><a href='/view/:<%= name3 %>'><%= name3 %></a></li>
-<li><a href='/view/:<%= name4 %>'><%= name4 %></a></li>
-<li><a href='/view/:<%= name5 %>'><%= name5 %></a></li>
-<li><a href='/view/:<%= name6 %>'><%= name6 %></a></li>
-<li><a href='/view/:<%= name7 %>'><%= name7 %></a></li>
-<li><a href='/view/:<%= name8 %>'><%= name8 %></a></li>
+            <li><a href='/view/<%= name1 %>'><%= name1 %></a></li>
+<li><a href='/view/<%= name2 %>'><%= name2 %></a></li>
+<li><a href='/view/<%= name3 %>'><%= name3 %></a></li>
+<li><a href='/view/<%= name4 %>'><%= name4 %></a></li>
+<li><a href='/view/<%= name5 %>'><%= name5 %></a></li>
+<li><a href='/view/<%= name6 %>'><%= name6 %></a></li>
+<li><a href='/view/<%= name7 %>'><%= name7 %></a></li>
+<li><a href='/view/<%= name8 %>'><%= name8 %></a></li>
 
         </ul>
     </div>
